i am fixing  almost work but only cured opertion are mising we are developing now till no it works  auth login
